--- a/himnonacional.html
+++ b/himnonacional.html
@@ -27,9 +27,7 @@ bajo el dombo gentil de tu cielo,
 ya flotaba un extraño pendón.
 </p>
 
-<p> <a href="paginaprincipal.html"> paginaprincipal </a>
-</p>
-</p>
+<a href="index.html"> paginaprincipal </a>
 
 </body>
 </html>
