--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <p id="segundo"> ¿Qué color tiene este parrafo?</p>
 <p id="tercero"> ¿Qué color tiene este parrafo?</p>
 
-<a href="paginaII.html"> practicaII </a>
+<a href="practicaII.html"> practicaII </a>
  
-<a href="paginaIII.html"> practicaIII </a>
+<a href="practicaIII.html"> practicaIII </a>
 
 <a href="himnonacional.html"> himnonacional </a>
 
