--- a/practicaII.html
+++ b/practicaII.html
@@ -15,7 +15,7 @@
 <p id ="tercero"> ¿Qué color tiene este párrafo?</p>
 
 
-<a href="paginaII.html"> practicaII </a>
+<a href="practicaII.html"> practicaIII </a>
 
 </body>
 </html>
